[package]
name = "bevy_rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_egui = "0.27"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = "1.0.197"
serde_json = "1.0.114"
async-compat = "0.2.3"
itertools = "0.12.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
